--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,6 +72,7 @@ nav a{
     font-size: 45px;
 }
 
+
 .banner{
     padding: 30px 30px 0px 150px;
     display: flex;
@@ -106,6 +107,10 @@ nav a{
 }
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /* about sections  styles */
 .about{
@@ -114,5 +119,21 @@ nav a{
     background: #FFF8F3;
     margin: 130px 0px;
     
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+    max-width: auto;
+}
+.about-info{
+    text-align: center;
+}
+
+.info-title{
+    font-weight: normal;
+}
+.info-description{
+    font-weight: bold;
 }
 
