--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -112,6 +112,10 @@ main{
     margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+}
+
 /* about sections  styles */
 .about{
     padding: 130px;
@@ -135,5 +139,32 @@ main{
 }
 .info-description{
     font-weight: bold;
+} 
+
+/* skills related styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px;
+
+}
+.skill-description{
+    color: #757575;
 }
 
+#what-i-do-description{
+    padding: 30px 150px;
+}
+
+/* resume section title */
+.resume-column-title{
+    display: flex;
+    color: #474747;
+    font-size: 30px;
+    font-family: 700;
+}
