--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -163,8 +163,37 @@ main section{
 
 /* resume section title */
 .resume-column-title{
-    display: flex;
     color: #474747;
     font-size: 30px;
     font-family: 700;
+}
+
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-description,
+.resume-item-institute{
+    color: #757575;
+}
+
+.resume-item-title{
+    color: #474747;
+    font-size: 25PX;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.resume-container hr{
+    margin: 30px 0px;
+}
+
+.download-cv{
+   text-align: center; 
 }
