--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -197,3 +197,11 @@ main section{
 .download-cv{
    text-align: center; 
 }
+
+/* footer  style*/
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 230px;
+    margin-top: 113px;
+}
