--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -201,7 +201,31 @@ main section{
 /* footer  style*/
 footer{
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 230px;
     margin-top: 113px;
 }
+
+.footer-column{
+    width: 50%;
+}
+
+.social-links a{
+    margin-right: 25px;
+}
+
+.contact input[type="text"],
+.contact input[type="email"], textarea{
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background-color: #FFF;
+    border: 0;
+    width: 100%;
+    
+}
+
+.contact input
