Fixed some error and add some extra CSS

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,7 +28,6 @@ body {
     color: #757575;
     text-align: center;
     font-size: 18px;
-
 }
 
 /* nav related styles */
@@ -228,8 +227,15 @@ footer{
     width: 100%;   
 }
 
-.section-title, 
-.section-description{
+.section-title-f{
+    color: #181818;
     text-align: left;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description-f{
+    color: #757575;
+    text-align: left;
+    font-size: 18px;
 }
 
